--- a/estilo.css
+++ b/estilo.css
@@ -1,89 +1,95 @@
-#title { 
-	
- font-family: 'Times New Roman';
-        font-size: 25px;
-        text-align: center;
-        
-    }
-    .subtitle{text-align: left; font-family:'Times New Roman'}
-    .corpo {text-align: justify; font-family: 'Times New Roman';margin-left: 8px;margin-right: 8px;}
-    .b-example-divider {padding-top: 1%; padding-bottom: 1%;background-color: #d4d3cf;border-style:solid;border-width:1px;}
-   .fundo {background-color: #ffffff; font-family: 'Times New Roman';}
+#title {
+  font-family: "Times New Roman";
+  font-size: 25px;
+  text-align: center;
+}
+.subtitle {
+  text-align: left;
+  font-family: "Times New Roman";
+}
+.corpo {
+  text-align: justify;
+  font-family: "Times New Roman";
+  margin-left: 8px;
+  margin-right: 8px;
+}
+.b-example-divider {
+  padding-top: 1%;
+  padding-bottom: 1%;
+  background-color: #d4d3cf;
+  border-style: solid;
+  border-width: 1px;
+}
+.fundo {
+  background-color: #ffffff;
+  font-family: "Times New Roman";
+}
 
-   .home{
-	
-	font-size: 20px;
-	
-	background-color: #212529;
-	color: #e5e8e8;
-	transition: all 0.5s linear;
+.home {
+  font-size: 20px;
+
+  background-color: #212529;
+  color: #e5e8e8;
+  transition: all 0.5s linear;
 }
 
 .home:hover {
-	background-color: #10066b;
-    color: #e5e8e8;
+  background-color: #10066b;
+  color: #e5e8e8;
 }
 
-.Poemas{
-	
-	font-size: 20px;
-	
-	background-color: #212529;
-	color: #e5e8e8;
-	transition: all 0.5s linear;
-    margin-left: 8px
+.Poemas {
+  font-size: 20px;
+
+  background-color: #212529;
+  color: #e5e8e8;
+  transition: all 0.5s linear;
+  margin-left: 8px;
 }
 
 .Poemas:hover {
-	background-color: #10066b;
-    color: #e5e8e8;
+  background-color: #10066b;
+  color: #e5e8e8;
 }
 
-.refexoes{
-	
-	font-size: 20px;
-	
-	background-color: #212529;
-	color: #e5e8e8;
-	transition: all 0.5s linear;
-    margin-left: 8px
+.refexoes {
+  font-size: 20px;
+
+  background-color: #212529;
+  color: #e5e8e8;
+  transition: all 0.5s linear;
+  margin-left: 8px;
 }
 
 .refexoes:hover {
-	background-color: #10066b;
-    color: #e5e8e8;
+  background-color: #10066b;
+  color: #e5e8e8;
 }
 
-.Contos{
-	
-	font-size: 20px;
-	
-	background-color: #212529;
-	color: #e5e8e8;
-	transition: all 0.5s linear;
-    margin-left: 8px
+.Contos {
+  font-size: 20px;
+
+  background-color: #212529;
+  color: #e5e8e8;
+  transition: all 0.5s linear;
+  margin-left: 8px;
 }
 
 .Contos:hover {
-	background-color: #10066b;
-    color: #e5e8e8;
+  background-color: #10066b;
+  color: #e5e8e8;
 }
 
-.Produtos{
-	
-	font-size: 20px;
-	
-	background-color: #212529;
-	color: #e5e8e8;
-	transition: all 0.5s linear;
-    margin-left: 8px
+.Produtos {
+  font-size: 20px;
+
+  background-color: #212529;
+  color: #e5e8e8;
+  transition: all 0.5s linear;
+  margin-left: 8px;
 }
 
 .Produtos:hover {
-	background-color: #10066b;
-    color: #e5e8e8;
+  background-color: #10066b;
+  color: #e5e8e8;
 }
-  
- 
-    
-	
