--- a/estilo.css
+++ b/estilo.css
@@ -1,108 +1,20 @@
-#title {
-  font-family: "Times New Roman";
-  font-size: 25px;
-  text-align: center;
-}
-.subtitle {
-  text-align: left;
-  font-family: "Times New Roman";
-}
-.corpo {
-  text-align: justify;
-  font-family: "Times New Roman";
-  margin-left: 8px;
-  margin-right: 8px;
-}
-.b-example-divider {
-  padding-top: 1%;
-  padding-bottom: 1%;
-  background-color: #d4d3cf;
-  border-style: solid;
-  border-width: 1px;
-}
-.fundo {
-  background-color: #ffffff;
-  font-family: "Times New Roman";
-}
+body{background-color:#0e0014;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+color: #f0e6f5}
 
-.home {
-  font-size: 20px;
+nav{text-align: left;
+color:#f0e6f5 ; font-size: 25px; }
+ul{list-style-type: none;
+ }
+ li{  margin-bottom: 4px;
+  margin-top: 4px; }
 
-  background-color: #212529;
-  color: #e5e8e8;
-  transition: all 0.5s linear;
-}
 
-.home:hover {
-  background-color: #10066b;
-  color: #e5e8e8;
-}
-
-.Poemas {
-  font-size: 20px;
-
-  background-color: #212529;
-  color: #e5e8e8;
-  transition: all 0.5s linear;
-  margin-left: 8px;
-}
-
-.Poemas:hover {
-  background-color: #10066b;
-  color: #e5e8e8;
-}
-
-.refexoes {
-  font-size: 20px;
-
-  background-color: #212529;
-  color: #e5e8e8;
-  transition: all 0.5s linear;
-  margin-left: 8px;
-}
-
-.refexoes:hover {
-  background-color: #10066b;
-  color: #e5e8e8;
-}
-
-.Contos {
-  font-size: 20px;
-
-  background-color: #212529;
-  color: #e5e8e8;
-  transition: all 0.5s linear;
-  margin-left: 8px;
-}
-
-.Contos:hover {
-  background-color: #10066b;
-  color: #e5e8e8;
-}
-
-.Produtos {
-  font-size: 20px;
-
-  background-color: #212529;
-  color: #e5e8e8;
-  transition: all 0.5s linear;
-  margin-left: 8px;
-}
-
-.Produtos:hover {
-  background-color: #10066b;
-  color: #e5e8e8;
-}
-
-footer{
-  margin: 0;
-  font-family:"Times New Roman";
-  font-size: 12px;
-  font-weight: 9px;
-  line-height: var(--bs-body-line-height);
-  color: var(--bs-body-color);
-  text-align: var(--bs-body-text-align);
-  background-color:  #e5e8e8;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;}
+  .container a {
+    text-align: left;
+    color:#f0e6f5 ;
+    text-decoration: none;
+    list-style-type: none
+   
+  }
 
