--- a/estilo.css
+++ b/estilo.css
@@ -1,51 +1,62 @@
-body{background-color:#0e0014;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-color: #f0e6f5}
-
-
-
-nav{text-align: left;
-color:#f0e6f5 ; font-size: 17px;
-flex-direction: column; }
-ul{list-style-type: none;
- 
-   padding: 1rem;
-  
-  
- }
- li{  margin-bottom: 1rem;
-  margin-top: 1rem; }
-
-
-  .container  {
-    display: flex; 
- justify-content: space-between;
-  align-items: flex-start;
-  color:#f0e6f5;
-align-items: left;
-margin-left: 0rem;
-padding-left: 0rem;
+body {
+  background-color: #0e0014;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #f0e6f5;
 }
 
-.container a{color:#f0e6f5 ;
+nav {
+  text-align: left;
+  color: #f0e6f5;
+  font-size: 17px;
+  flex-direction: column;
+}
+ul {
+  list-style-type: none;
+
+  padding: 1rem;
+}
+li {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+.showdownon {
+  padding:1px
+  
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  color: #f0e6f5;
+  align-items: left;
+  margin-left: 0rem;
+  padding-left: 0rem;
+}
+
+.container a {
+  color: #f0e6f5;
   text-decoration: none;
-  list-style-type: none;}
+  list-style-type: none;
+}
 
-  .container1 a{color:#f0e6f5 ;
-    text-decoration: none;
-    list-style-type: none;
-    text-align: left;}
+.container1 a {
+  color: #f0e6f5;
+  text-decoration: none;
+  list-style-type: none;
+  text-align: left;
+}
 
-    @media (max-width: 900px){
-      .container {
-          flex-direction: column;        
-      }
-      .container1  { flex-direction: column; }
+@media (max-width: 900px) {
+  .container {
+    flex-direction: column;
+  }
+  .container1 {
+    flex-direction: column;
+  }
 
-     ul{
-        
-        width: 20%;
-    }
-
-    
-    }
+  ul {
+    width: 20%;
+  }
+}
