--- a/estilo.css
+++ b/estilo.css
@@ -20,11 +20,13 @@ li {
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
-.showdownon {
-  padding:1px
-  
-}
 
+
+section#contolador input{
+  background-color: #0e0014;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #f0e6f5;}
 .container {
   display: flex;
   justify-content: space-between;
@@ -47,6 +49,10 @@ li {
   list-style-type: none;
   text-align: left;
 }
+
+#Projetos{display: none;}
+#contato{display: none;}
+#minhasskils{display: none;}
 
 @media (max-width: 900px) {
   .container {
