--- a/estilo.css
+++ b/estilo.css
@@ -53,10 +53,10 @@ section#contolador input{
 #Projetos{display: none;
   animation: go-back1 1s;}
 #contato{display: none;
-  animation: go-back 1s;}
+  animation: go-back1 1s;}
 
 #minhasskils{display: none;
-  animation: go-back 1s;}
+  animation: go-back1 1s;}
 
   @keyframes go-back1 {
     from {
