--- a/estilo.css
+++ b/estilo.css
@@ -56,15 +56,13 @@ section#contolador input{
   animation: go-back1 1s;}
 
 #minhasskils{display: none;
-  animation: go-back1 1s;}
+  animation: go-back1 0.5s;}
 
   @keyframes go-back1 {
-    from {
-      transform: translateY(0);
-    }
-    to {
-      transform: translateY(20px);
-    }
+    0%    { opacity: 0; }
+    100%  { opacity: 1; }
+    from { top: 0; left: 0; }
+  to   { top: 100px; left: 100px; }
   } 
 
 @media (max-width: 900px) {
