--- a/estilo.css
+++ b/estilo.css
@@ -22,11 +22,16 @@ li {
 }
 
 
-section#contolador input{
+#controlador{
   background-color: #0e0014;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #f0e6f5;}
+  color: #f0e6f5;
+  border: 0 none;
+  outline: 0;
+  text-transform: lowercase;
+}
+
 .container {
   display: flex;
   justify-content: space-between;
