--- a/style.css
+++ b/style.css
@@ -21,8 +21,7 @@ li {
   margin-top: 1rem;
 }
 
-
-#controlador{
+#controlador {
   background-color: #0e0014;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -55,20 +54,36 @@ li {
   text-align: left;
 }
 
-#Projetos{display: none;
-  animation: go-back1 1s;}
-#contato{display: none;
-  animation: go-back1 1s;}
+#Projetos {
+  display: none;
+  animation: go-back1 1s;
+}
+#contato {
+  display: none;
+  animation: go-back1 1s;
+}
 
-#minhasskils{display: none;
-  animation: go-back1 0.5s;}
+#minhasskils {
+  display: none;
+  animation: go-back1 0.5s;
+}
 
-  @keyframes go-back1 {
-    0%    { opacity: 0; }
-    100%  { opacity: 1; }
-    from { top: 0; left: 0; }
-  to   { top: 100px; left: 100px; }
-  } 
+@keyframes go-back1 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+  from {
+    top: 0;
+    left: 0;
+  }
+  to {
+    top: 100px;
+    left: 100px;
+  }
+}
 
 @media (max-width: 900px) {
   .container {
